@@ -981,5 +981,5 @@ UPDATE `gibbonAlertType` SET `thresholdLow`=(SELECT IFNULL(value,3) FROM gibbonS
 UPDATE `gibbonAlertType` SET `thresholdLow`=(SELECT IFNULL(value,3) FROM gibbonSetting WHERE name='behaviourAlertLowThreshold' LIMIT 1),thresholdMed=(SELECT IFNULL(value,5) FROM gibbonSetting WHERE name='behaviourAlertMediumThreshold' LIMIT 1),thresholdHigh=(SELECT IFNULL(value,9) FROM gibbonSetting WHERE name='behaviourAlertHighThreshold' LIMIT 1) WHERE name='Behaviour';end
 DELETE FROM `gibbonSetting` WHERE `name` LIKE '%Alert%Threshold' AND scope='User Admin';end
 INSERT INTO `gibbonEmailTemplate` (`gibbonEmailTemplateID`, `type`, `templateType`, `moduleName`, `templateName`, `templateSubject`, `templateBody`, `variables`) VALUES (NULL, 'Core', 'Parent Notification for Student Lending Item', 'Library', 'Parent Notification for Student Lending Item', 'Notice of Student Lending Item', '<p>Dear {{preferredName}},</p>\r\n<p>This is a notice to let you know that {{studentPreferredName}} has recently borrowed an item from the library. Please return the item according to the return date.</p>\r\n<p>This is an automated message. Please contact {{organisationEmail}} with any questions.</p>', '{\r\n\"parentEmail\": [\"safeEmail\"], \r\n\"date\": [\"date\"],\r\n\"amount\": [\"randomFloat\", 2, 10, 100],\r\n\"studentPreferredName\": [\"firstName\"],\r\n\"studentSurname\": [\"lastName\"],\r\n\"studentOfficialName\": [\"name\"],\r\n\"parentTitle\": [\"titleFemale\"],\r\n\"parentPreferredName\": [\"firstNameFemale\"],\r\n\"parentSurname\": [\"lastName\"],\r\n\"organisationEmail\": [\"safeEmail\"],\r\n\"organisationName\": [\"name\"]\r\n}');end
-
+CREATE TABLE `gibbonPersonPhoto` (`gibbonPersonPhotoID` INT(12) UNSIGNED ZEROFILL NOT NULL AUTO_INCREMENT, `gibbonSchoolYearID` INT(3) UNSIGNED ZEROFILL NOT NULL,`gibbonPersonID` INT(10) UNSIGNED ZEROFILL NOT NULL, `personImage` varchar(255) NOT NULL, `gibbonPersonIDCreated` INT(10) DEFAULT NULL, `timestamp` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP, PRIMARY KEY (`gibbonPersonPhotoID`), UNIQUE KEY (`gibbonPersonID`,`gibbonSchoolYearID`)) ENGINE = InnoDB;end
 ";
