@@ -22,6 +22,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 //Gibbon system-wide includes
 
 use Gibbon\Http\Url;
+use Gibbon\Domain\User\PersonPhotoGateway;
 
 include './gibbon.php';
 
@@ -89,6 +90,20 @@ if ($gibbonPersonID == '' or $gibbonPersonID != $session->get('gibbonPersonID') 
             } catch (PDOException $e) {
                 header("Location: {$URL->withReturn('error2')}");
                 exit();
+            }
+
+            if (!empty($attachment1)) {
+                $personPhotoGateway = $container->get(PersonPhotoGateway::class);
+                // Update/insert the photo into the backup table
+                $photoUpdated = $personPhotoGateway->insertAndUpdate([
+                    'gibbonPersonID' => $userData['gibbonPersonID'],
+                    'gibbonSchoolYearID' => $session->get('gibbonSchoolYearID'),
+                    'personImage' => $file['relativePath'],
+                    'gibbonPersonIDCreated' => $session->get('gibbonPersonID'),
+                ], [
+                    'personImage' => $file['relativePath'],
+                    'gibbonPersonIDCreated' => $session->get('gibbonPersonID'),
+                ]);
             }
 
             //Update session variables
